--- a/index.qmd
+++ b/index.qmd
@@ -1,41 +1,32 @@
 ---
 title: "Hello Muggles"
 subtitle: "Welcome to Superficial Muggle's World. Let's dive deep into the muggle world and see some magics in our world"
+#about: 
+#  template: trestles
+#  image-shape: round
+#  image-width: 20em
+#  links:
+#    - text: LinkedIn
+#      href: https://www.linkedin.com/in/samanthacsik/
+#    - text: Twitter
+#      href: https://twitter.com/SamanthaCsik
+#    - text: GitHub
+#      href: https://github.com/samanthacsik
+#    - text: Email
+#      href: mailto:scsik@ucsb.edu
 author: "Pumpkin Chen"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: false
-  filter-ui: false
+#number-sections: true
+toc: true
+#toc-location： right
+#listing:
+#  contents: posts
+#  sort: "date desc"
+#  type: default
+#  categories: true
+#  sort-ui: false
+#  filter-ui: false
+#page-layout: article
 page-layout: full
-title-block-banner: true
+title-block-banner: "Garden.JPG"
+#title-block-banner: true
 ---
-
-# 1. Economic Basic info
-
-Overall picture of economy behavior from may dimensions to observe the chances
-
-```{r}
-#| label: load-packages
-#| warning: false
-#| echo: false
-library(xlsx)
-library(reshape)
-library(ggplot2)
-library(tidyverse)
-raw_data_file <- "C:/Users/timch/iCloudDrive/Statistical Learning project/Raw data/Raw_Data.xlsx"
-EXCNYUSD <-openxlsx::read.xlsx(raw_data_file,1,detectDates = TRUE)
-df1 <- melt(EXCNYUSD, id.vars = "日期")
-ggplot(df1%>%filter(日期>='2024-01-01'),aes(x=日期, y=value,color=variable)) +
-  geom_line(linetype = "dashed") +
-  geom_line() +
-  geom_point(size=1) +
-  labs(title="China Yuan to US Dollar Exchange Rate",
-       subtitle="Bank of China publish price of US dollar in China Yuan",
-       x="Price of US dollar per 100 China Yuan",y="日期") +
-  theme_minimal()
-```
-
-![Good luck boy](images/IMG_9362.JPG)
