--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ subtitle: "Welcome to Superficial Muggle's World. Let's dive deep into the muggl
 #      href: mailto:scsik@ucsb.edu
 author: "Pumpkin Chen"
 #number-sections: true
-toc: true
+toc: false
 #toc-location： right
 #listing:
 #  contents: posts
@@ -30,3 +30,11 @@ page-layout: full
 title-block-banner: "Garden.JPG"
 #title-block-banner: true
 ---
+
+::: {layout="[1,3]"}
+[![](images/红乙女.jpeg){fig-align="left" width="289" height="362"}](Econ_Intro/index.qmd)
+
+![](images/Rainbow.JPG){fig-align="left" width="289" height="362"}
+
+![](images/黄金流泉.JPG){fig-align="left" width="289" height="362"}
+:::
